--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.36",
+    "@types/nunjucks": "^3.1.2",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.2",
     "ts-node": "^8.4.1",
@@ -28,6 +29,7 @@
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nunjucks": "^3.2.0"
   }
 }
