--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Hector Trujillo",
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.36",
+    "@types/express": "^4.17.1",
     "@types/nunjucks": "^3.1.2",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.2",
@@ -23,7 +24,6 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "@types/express": "^4.17.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
