--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.1",
     "@types/nunjucks": "^3.1.2",
@@ -27,6 +28,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
