--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run serve",
     "build": "npm run build-ts && npm run lint",
-    "serve": "nodemon dist/server.js",
+    "serve": "nodemon dist/server.js -e njk,js,css",
     "build-ts": "tsc",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
